--- a/README.textile
+++ b/README.textile
@@ -118,7 +118,7 @@ bc.
   <dependencies>
     <dependency>
       <groupId>com.github.sebhoss.units</groupId>
-      <artifactId>common-units</artifactId>
+      <artifactId>storage-units</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
