Use latest release
Signed-off-by: Sebastian Hoß <mail@shoss.de>

--- a/README.textile
+++ b/README.textile
@@ -119,7 +119,7 @@ bc.
     <dependency>
       <groupId>com.github.sebhoss.units</groupId>
       <artifactId>storage-units</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
 
