--- a/README.textile
+++ b/README.textile
@@ -119,10 +119,11 @@ bc.
     <dependency>
       <groupId>com.github.sebhoss.units</groupId>
       <artifactId>storage-units</artifactId>
-      <version>1.0.0</version>
+      <version>${version.storage-units}</version>
     </dependency>
   </dependencies>
 
+p. Replace @${version.storage-units}@ with the "latest release":http://search.maven.org/#search%7Cga%7C1%7Cg%3Acom.github.sebhoss%20a%3Astorage-units
 
 h2. Development
 
