--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,8 +1,9 @@
 = Storage-Units 
 
-!https://travis-ci.org/sebhoss/storage-units.png?branch=master!:https://travis-ci.org/sebhoss/storage-units
-!https://www.ohloh.net/p/storage-units/widgets/project_thin_badge.gif!:https://www.ohloh.net/p/storage-units
-!https://scan.coverity.com/projects/2658/badge.svg!:https://scan.coverity.com/projects/2658
+image:https://img.shields.io/maven-central/v/com.github.sebhoss/storage-units.svg?style=flat-square["Maven Central", link="https://maven-badges.herokuapp.com/maven-central/com.github.sebhoss/storage-units"]
+image:https://travis-ci.org/sebhoss/storage-units.png?branch=master["Build Status", link="https://travis-ci.org/sebhoss/storage-units"]
+image:https://www.ohloh.net/p/storage-units/widgets/project_thin_badge.gif["Open Hub statistics", link="https://www.ohloh.net/p/storage-units"]
+image:https://scan.coverity.com/projects/2658/badge.svg["Coverity Scan Result", link="https://scan.coverity.com/projects/2658"]
 
 Implementation of storage units according to link:http://en.wikipedia.org/wiki/ISO/IEC_80000[ISO IEC 80000-13:2008].
 
