--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,9 +1,16 @@
-= Storage-Units 
+= Storage-Units
+Sebastian Hoß <https://github.com/sebhoss[@sebhoss]>
+:github-org: sebhoss
+:project-name: storage-units
+:project-group: com.github.sebhoss
+:coverity-project: 2658
+:toc:
+:toc-placement: preamble
 
-image:https://img.shields.io/maven-central/v/com.github.sebhoss/storage-units.svg?style=flat-square["Maven Central", link="https://maven-badges.herokuapp.com/maven-central/com.github.sebhoss/storage-units"]
-image:https://img.shields.io/travis/sebhoss/storage-units/master.svg?style=flat-square["Build Status", link="https://travis-ci.org/sebhoss/storage-units"]
-image:https://www.ohloh.net/p/storage-units/widgets/project_thin_badge.gif["Open Hub statistics", link="https://www.ohloh.net/p/storage-units"]
-image:https://scan.coverity.com/projects/2658/badge.svg["Coverity Scan Result", link="https://scan.coverity.com/projects/2658"]
+image:https://img.shields.io/maven-central/v/{project-group}/{project-name}.svg?style=flat-square["Maven Central", link="https://maven-badges.herokuapp.com/maven-central/{project-group}/{project-name}"]
+image:https://img.shields.io/travis/{github-org}/{project-name}/master.svg?style=flat-square["Build Status", link="https://travis-ci.org/{github-org}/{project-name}"]
+image:https://www.ohloh.net/p/{project-name}/widgets/project_thin_badge.gif["Open Hub statistics", link="https://www.ohloh.net/p/{project-name}"]
+image:https://scan.coverity.com/projects/{coverity-project}/badge.svg["Coverity Scan Result", link="https://scan.coverity.com/projects/{coverity-project}"]
 
 Implementation of storage units according to link:http://en.wikipedia.org/wiki/ISO/IEC_80000[ISO IEC 80000-13:2008].
 
@@ -218,24 +225,24 @@ BigDecimal amount = gigabyte(15).inTerabyte()   // 0.015
 
 === Caveats
 
-Be wary of integer overflow when working with `long`. To be safe, always use `BigInteger`.
+Be wary of integer overflow when working with `long`. To be safe, always use `BigInteger` as input values.
 
 === Integration
 
 To use this project just declare the following dependency inside your POM:
 
-[source,xml]
+[source,xml,subs="attributes,verbatim"]
 ----
 <dependencies>
   <dependency>
-    <groupId>com.github.sebhoss.units</groupId>
-    <artifactId>storage-units</artifactId>
+    <groupId>{project-group}</groupId>
+    <artifactId>{project-name}</artifactId>
     <version>${version.storage-units}</version>
   </dependency>
 </dependencies>
 ----
 
-Replace `${version.storage-units}` with the link:http://search.maven.org/#search%7Cga%7C1%7Cg%3Acom.github.sebhoss%20a%3Astorage-units[latest release]. This project follows the link:http://semver.org/[semantic versioning guidelines].
+Replace `${version.storage-units}` with the link:http://search.maven.org/#search%7Cga%7C1%7Cg%3A{project-group}%20a%3A{project-name}[latest release]. This project follows the link:http://semver.org/[semantic versioning guidelines].
 
 === Compatibility
 
@@ -243,10 +250,10 @@ This project is compatible with the following Java versions:
 
 .Java compatibility
 |===
-| Java Version | 1.X.Y | 2.X.Y
+| | 1.X.Y | 2.X.Y
 
 | Java 8
-| 
+| ✓
 | ✓
 
 | Java 7
