add codacy project number
Signed-off-by: Sebastian Hoß <mail@shoss.de>

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -4,6 +4,7 @@ Sebastian Hoß <https://github.com/sebhoss[@sebhoss]>
 :project-name: storage-units
 :project-group: de.xn--ho-hia.utils.storage_units
 :coverity-project: 2658
+:codacy-project: d3cfbbc415c14b79a661d573ac11e68c
 :toc:
 :toc-placement: preamble
 
