--- a/README.asciidoc
+++ b/README.asciidoc
@@ -127,7 +127,7 @@ https://www.java.com[Java] library for storage units according to link:http://en
 
 === Development Status
 
-All units according to ISO IEC 80000-13:2008 are implemented. This project is in maintenance mode.
+All units according to ISO IEC 80000-13:2008 are implemented. There are some future ideas, take a look at the link:https://github.com/sebhoss/storage-units/issues[open tickets] in case you are interested. Apart from that, this project is in maintenance mode.
 
 
 == Usage
