--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -4,6 +4,12 @@ All notable changes to this project will be documented in this file.
 
 == link:++https://github.com/sebhoss/storage-units/compare/storage-units-3.0.0-20160703155124...master++[Unreleased]
 
+=== Added
+
+* Allow to customize the formatted output of a unit with a custom format/pattern/locale
+* Provide as-best-matching converters for units
+* The `Byte` unit!
+
 == link:++https://github.com/sebhoss/storage-units/compare/storage-units-2.0.0...storage-units-3.0.0-20160703155124++[3.0.0] - 2016-07-03
 
 === Changed
